--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 <h1>Privacy Policy – Catalogr</h1>
-<p><strong>Effective Date:</strong> [DATE]</p>
+<p><strong>Effective Date:</strong> January 19, 2026</p>
 
 <p>Catalogr is a personal inventory and records management application designed to help users catalog belongings, documents, photos, and emergency-related information.</p>
 
