--- a/index.html
+++ b/index.html
@@ -2,50 +2,137 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Catalogr Privacy Policy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy – Catalogr</title>
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      max-width: 800px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      max-width: 760px;
       margin: 40px auto;
       padding: 0 20px;
       line-height: 1.6;
       color: #111;
     }
     h1, h2 {
-      margin-top: 1.5em;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
     }
   </style>
 </head>
 <body>
 
 <h1>Privacy Policy – Catalogr</h1>
-<p><strong>Effective Date:</strong> January 19, 2026</p>
 
-<p>Catalogr is a personal inventory and records management application designed to help users catalog belongings, documents, photos, and emergency-related information.</p>
+<p><strong>Effective Date:</strong> January 19, 2026<br>
+<strong>Last Updated:</strong> February 21, 2026</p>
+
+<p>
+Catalogr is a personal inventory and records management application designed
+to help users catalog belongings, documents, photos, and emergency-related information.
+We are committed to protecting your data and maintaining transparency about how it is handled.
+</p>
 
 <h2>Information We Collect</h2>
 <ul>
   <li>Email address for account creation and authentication</li>
   <li>User-generated content including item details, notes, documents, photos, and videos</li>
-  <li>An internal user ID to associate data with an account</li>
+  <li>An internal user ID used to associate data with your account</li>
 </ul>
 
+<p>
+Catalogr does not collect location data, device fingerprinting data,
+behavioral tracking data, or advertising identifiers.
+</p>
+
 <h2>How We Use Information</h2>
-<p>Data is used only to provide core app functionality, authenticate users, store content, and secure accounts.</p>
+<p>Your data is used solely to:</p>
+<ul>
+  <li>Authenticate and manage your account</li>
+  <li>Store and retrieve your inventory and uploaded content</li>
+  <li>Provide core application functionality</li>
+  <li>Maintain system security and integrity</li>
+</ul>
+
+<p>
+We do not use your content for advertising, profiling, or AI model training.
+</p>
+
+<h2>Data Storage & Infrastructure</h2>
+<p>
+Catalogr stores structured data (such as item metadata and account information)
+in a managed PostgreSQL database. Uploaded files (photos, documents, videos)
+are stored separately in secure mounted storage.
+</p>
+
+<p>
+All network communication is encrypted using HTTPS.
+</p>
+
+<h2>Data Retention & Account Deletion</h2>
+<p>
+You may delete your account at any time within the app.
+When an account is deleted:
+</p>
+<ul>
+  <li>All associated database records are permanently removed</li>
+  <li>All associated uploaded files are permanently deleted</li>
+  <li>Deletion is irreversible</li>
+</ul>
+
+<p>
+We do not retain user content after account deletion beyond routine short-term
+infrastructure backups required for service stability.
+</p>
 
 <h2>Data Sharing</h2>
-<p>Catalogr does not sell, rent, or share personal data with third parties.</p>
+<p>
+Catalogr does not sell, rent, or share personal data with third parties.
+We do not provide user data to advertisers.
+</p>
+
+<p>
+We may disclose information only if required by law or valid legal process.
+</p>
 
 <h2>Tracking & Analytics</h2>
-<p>Catalogr does not track users and does not use analytics or advertising SDKs.</p>
+<p>
+Catalogr does not use third-party analytics SDKs, advertising frameworks,
+or behavioral tracking systems.
+</p>
+
+<h2>User Responsibility</h2>
+<p>
+Users retain full ownership of the content they upload.
+By using Catalogr, you affirm that:
+</p>
+<ul>
+  <li>You have the legal right to upload the content you provide</li>
+  <li>The content does not violate applicable laws</li>
+  <li>The content does not infringe on third-party rights</li>
+</ul>
 
 <h2>Data Security</h2>
-<p>We use encrypted network communication and standard security measures to protect user data.</p>
+<p>
+We implement industry-standard security practices including encrypted communication,
+authentication controls, and secure server infrastructure.
+No system can guarantee absolute security, but we take reasonable measures
+to protect user data.
+</p>
 
 <h2>Contact</h2>
-<p>If you have questions, contact us at <strong>support@catalogr.app</strong>.</p>
+<p>
+If you have questions about this Privacy Policy or your data,
+please contact:
+</p>
+
+<p><strong>mail@alcalylo.com</strong></p>
+
+<p>
+For account deletion requests or privacy-related concerns,
+you may also contact us at the same email address.
+</p>
 
 </body>
 </html>
